# embassy-rs-pico-template

./: .gitignore  Cargo.toml  README.md
