[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

defmt = "0.3.5"
defmt-rtt = "0.4.0"

embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy/", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy/", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy/", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy/", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }

[profile.release]
strip = true
opt-level = "z"
debug = 2
lto = true
